--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400);
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400); */
 
 body {
 font: normal normal 13px/16px "Open Sans", sans-serif;
